@startuml
'https://plantuml.com/class-diagram

class Packaging
class Box
class PolyBag
enum Material


Packaging <|-- Box
Packaging <|-- PolyBag
Packaging --> Material

class Box {
    -BigDecimal length
    -BigDecimal width
    -BigDecimal height
    +getMass()
    +canFitItem()
}

class Packaging {
    -Material material
    +getMaterial()
    +canFitItem()
    +equals()
    +hashCode()
    +getMass()
}

class PolyBag {
    -BigDecimal volume
    +getMass()
    +getVolume()
    +canFitItem()
}

enum Material {
    + CORRUGATE
    + LAMINATED_PLASTIC
}


@enduml